tests/parser/errors/playerdec_field_no_value.gbl
player p { dollars: , chance: 1%, streak: 1x }
